can_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: can
spec:
  replicas: 1
  selector:
    matchLabels:
      app: can
  template:
    metadata:
      labels:
        app: can
    spec:
      containers:
        - name: cancontainer
          image: test:can
          ports:
            - name: canport
              containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
   name: cansvc
spec:
  type: NodePort
  selector:
    app: can
  ports:
    - name: canport
      port: 8000
      targetPort: 8000
      nodePort: 30002
