reg_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reg
  template:
    metadata:
      labels:
        app: reg
    spec:
      containers:
        - name: regcontainer
          imagePullPolicy: Never
          image: test:1
          ports:
            - name: regport
              containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
   name: regsvc
spec:
  type: NodePort
  selector:
    app: reg
  ports:
    - name: regport
      port: 8000
      targetPort: 8000
      nodePort: 30001
