caningress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: caningress
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "50"
spec:
  ingressClassName: nginx
  rules:
   - http:
       paths:
         - path: /user
           pathType: Prefix
           backend:
             service:
               name: cansvc
               port:
                 number: 8000
