regingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: regingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-example
  rules:
   - http:
       paths:
         - path: /user
           pathType: Prefix
           backend:
             service:
               name: regsvc
               port:
                 number: 8000
